[package]
name = "axocli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.67"
backtrace-ext = "0.2.1"
console = "0.15.5"
miette = { version = "5.6.0", features = ["fancy"] }
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"], optional = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
