[package]
name = "axocli"
version = "0.1.0"
edition = "2021"
description = "common code for setting up a CLI App and handling errors/printing."
repository = "https://github.com/axodotdev/axocli"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.67"
backtrace-ext = "0.2.1"
console = "0.15.5"
miette = { version = "5.6.0", features = ["fancy"] }
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# dev-deps are use by the example
# for sake of clarity duplicate deps are repeated here!
[dev-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
miette = "5.6.0"