[package]
name = "axocli"
version = "0.3.0"
edition = "2021"
description = "common code for setting up a CLI App and handling errors/printing."
repository = "https://github.com/axodotdev/axocli"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.69"
backtrace-ext = "0.2.1"
console = "0.16.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = "1.0.200"
serde_json = "1.0.95"
thiserror = "2.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# dev-deps are use by the example
# for sake of clarity duplicate deps are repeated here!
[dev-dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "2.0.12"
miette = "7.2.0"
